# OpenCL-Structure-from-Motion

./: .gitignore  CMakeLists.txt  arm-linux-gnueabihf.toolchain.cmake  demo_sfm.cpp  main.cpp  readme.md  sfm.cpp
demo/: demo_sfm.cpp  gui.cc  gui.hh  image_sequence.hh  ply_exporter.cc  ply_exporter.hh
demo/shaders/: fragment.glsl  vertex.glsl
graph/: calls.dot
matlab/: demo_structure_from_motion.m  plotMatch.m  visualOdometryMonoMex.cpp
src/: ply_exporter.cpp  reconstruction.cpp
test/: simd.cpp
viso/: _opencl_context.hh  filter.cpp  filter.h  matcher.cpp  matcher.h  matrix.cpp  matrix.h  opencl_container.hh  opencl_wrapper.cpp  opencl_wrapper.hh  point3d.hh  reconstruction.cpp  reconstruction.h  sfm.hh  simd.hh  sse_to_neon.hpp  timer.hh  triangle.cpp  viso.cpp  viso.h  viso_mono.cpp  viso_mono.h  viso_mono_cl.cpp  viso_mono_cl.cpp.orig  viso_mono_cl.h  viso_stereo.cpp  viso_stereo.h
viso/kernels/: inlier.cl  plane_and_inliers.cl
